src/objects/Member_Storage__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>(ISBLANK(End_Date__c) &amp;&amp; TODAY()&gt;=Start_Date__c) || (NOT(ISBLANK(End_Date__c)) &amp;&amp; Start_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= End_Date__c)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contents__c</fullName>
        <label>Contents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <description>Date member is added to the waitlist</description>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Combination__c</fullName>
        <label>Member Combination</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <formula>text(Member__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The member you are adding must have a status of &quot;Active&quot; in order to be selected.</errorMessage>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Storage</relationshipLabel>
        <relationshipName>Member_Storage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rental_Status__c</fullName>
        <label>Rental Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Storage</label>
        <referenceTo>Storage__c</referenceTo>
        <relationshipLabel>Member Storage</relationshipLabel>
        <relationshipName>Member_Storage_To_Storage</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Member Storage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Storage__c</columns>
        <columns>Member__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>General_Waitlist_No_Storage_Specified</fullName>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>Priority__c</columns>
        <columns>Date_Added__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Member_Storage__c.Master_Storage_Waitlist</value>
        </filters>
        <label>Master Waitlist (No Storage Specified)</label>
    </listViews>
    <listViews>
        <fullName>Waitlisted_Members</fullName>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>Priority__c</columns>
        <columns>Storage__c</columns>
        <columns>Date_Added__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Member_Storage__c.Storage_Waitlist</value>
        </filters>
        <label>Waitlisted Members (Storage Specified)</label>
    </listViews>
    <nameField>
        <displayFormat>MEMSTOR-{0000000}</displayFormat>
        <label>Member Storage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Storage</pluralLabel>
    <recordTypes>
        <fullName>Master_Storage_Waitlist</fullName>
        <active>true</active>
        <description>Use this record type for adding a member to the master waitlist where a storage unit is not specified.</description>
        <label>Master Storage Waitlist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Storage_Rental</fullName>
        <active>true</active>
        <description>Use this record type for assigning a member to a specific storage unit (not waitlist).</description>
        <label>Storage Rental</label>
    </recordTypes>
    <recordTypes>
        <fullName>Storage_Waitlist</fullName>
        <active>true</active>
        <description>Use this record type to put a member on the waitlist for a specific storage unit.</description>
        <label>Storage Waitlist</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>C62_Start_Date_is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Storage_Is_Available</fullName>
        <active>true</active>
        <description>Test if the storage unit is available</description>
        <errorConditionFormula>ISPICKVAL( Storage__r.Status__c , &quot;Out of Service&quot;)</errorConditionFormula>
        <errorMessage>Sorry this storage unit is unavailable. Please choose another.</errorMessage>
    </validationRules>
</CustomObject>